--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prebuild": "npm run patch",
     "build": "rimraf dist && NODE_ENV=production babel src --out-dir dist",
     "predeploy": "npm run build",
-    "deploy": "git add . && git commit -m 'build' && git push",
+    "deploy": "git add . && git commit -m 'build' && git push origin master",
     "postdeploy": "npm run publi",
     "publi": "npm publish",
     "prepubli": "npm whoami || npm login"
