--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "patch": "npm version patch",
     "prebuild": "npm run patch",
-    "build": "rimraf dist && NODE_ENV=production babel src --out-dir dist",
+     "build":"npm run _build",
+    "_build": "rimraf dist && NODE_ENV=production babel src --ignore \"src/**/*.stories.jsx\",\"src/**/*.test.jsx\"  --out-dir dist --source-maps",
     "predeploy": "npm run build",
     "deploy": "git add . && git commit -m 'build' && git push origin master",
     "postdeploy": "npm run publi",
@@ -55,5 +56,8 @@
   "bugs": {
     "url": "https://github.com/jupegarnica/typed-component/issues"
   },
-  "homepage": "https://github.com/jupegarnica/typed-component#readme"
+  "homepage": "https://github.com/jupegarnica/typed-component#readme",
+  "dependencies": {
+    "jest": "^24.9.0"
+  }
 }
