--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "patch": "npm version patch",
     "prebuild": "npm run patch",
-     "build":"npm run _build",
+    "build": "npm run _build",
     "_build": "rimraf dist && NODE_ENV=production babel src --ignore \"src/**/*.stories.jsx\",\"src/**/*.test.jsx\"  --out-dir dist --source-maps",
     "predeploy": "npm run build",
     "deploy": "git add . && git commit -m 'build' && git push origin master",
@@ -27,7 +28,8 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "jest": "^24.9.0"
   },
   "browserslist": {
     "production": [
@@ -58,6 +60,7 @@
   },
   "homepage": "https://github.com/jupegarnica/typed-component#readme",
   "dependencies": {
-    "jest": "^24.9.0"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   }
 }
