--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "homepage": "https://github.com/jupegarnica/typed-component#readme",
   "dependencies": {
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "storybook": "^5.1.11"
   }
 }
