--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,10 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: npm install  and test
       run: |
         npm i
-        npm run build
-        npm test
+        npm run _build
+        npm run test:dist
       env:
         CI: true
