--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "patch": "npm version patch",
     "prebuild": "npm run patch",
     "build": "npm run _build",
-    "_build": "rimraf dist && NODE_ENV=production babel src   --out-dir dist --source-maps",
+    "env":"NODE_ENV=production ||set NODE_ENV=production",
+    "_build": "rimraf dist && npm run env && babel src   --out-dir dist --source-maps",
     "predeploy": "npm run build",
     "deploy": "npm run commit && git push origin master",
     "postdeploy": "npm run publi",
