--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: 12.0.0
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@51fdb4531e99aac1873764ef7271af448dc42ab4
-      with: # All of theses inputs are optional
+      # with: # All of theses inputs are optional
         # tag_name: "v%s"
         # tag_message: "v%s"
         # commit_pattern: "^build(\\.+)?"
