--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -16,10 +16,10 @@ jobs:
         node-version: 12.0.0
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@51fdb4531e99aac1873764ef7271af448dc42ab4
-      with: # All of theses inputs are optional
-        tag_name: "%s"
-        tag_message: "v%s"
-        commit_pattern: "%s"
+      # with: # All of theses inputs are optional
+        # tag_name: "%s"
+        # tag_message: "v%s"
+        # commit_pattern: "%s"
         # commit_pattern: "^build(\\.+)?"
       env: # More info about the environment variables in the README
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
